deploy: 92370ed257575d68696723f511e4162c40bee1a1

--- a/ddd/data-intensive-application/2-data-models-query-languages/index.html
+++ b/ddd/data-intensive-application/2-data-models-query-languages/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
+                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
             
     
 
@@ -824,7 +824,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-98 { color: #B8B8B8 !important; }
 	.__c-98:visited { color: #7C7C7C !important; }
 	body.dark  .__c-98:visited { color: #B8B8B8 !important; }
-	.__bgc-99 { background-color: #f5f5f5; }
+	.__bgc-99 { background-color: #F2E6FF; }
 	body.dark .__bgc-99 { background-color: #21222c; }
 	.__rl-102 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-102 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -913,7 +913,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-164 { color: #B8B8B8 !important; }
 	.__c-164:visited { color: #7C7C7C !important; }
 	body.dark  .__c-164:visited { color: #B8B8B8 !important; }
-	.__bgc-165 { background-color: #f5f5f5; }
+	.__bgc-165 { background-color: #F2E6FF; }
 	body.dark .__bgc-165 { background-color: #21222c; }
 	.__rl-168 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-168 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1081,7 +1081,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-273 { color: #B8B8B8 !important; }
 	.__c-273:visited { color: #7C7C7C !important; }
 	body.dark  .__c-273:visited { color: #B8B8B8 !important; }
-	.__bgc-274 { background-color: #f5f5f5; }
+	.__bgc-274 { background-color: #F2E6FF; }
 	body.dark .__bgc-274 { background-color: #21222c; }
 	.__rl-277 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-277 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1141,7 +1141,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-322 { color: #B8B8B8 !important; }
 	.__c-322:visited { color: #7C7C7C !important; }
 	body.dark  .__c-322:visited { color: #B8B8B8 !important; }
-	.__bgc-323 { background-color: #f5f5f5; }
+	.__bgc-323 { background-color: #F2E6FF; }
 	body.dark .__bgc-323 { background-color: #21222c; }
 	.__rl-326 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-326 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1222,7 +1222,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-383 { color: #B8B8B8 !important; }
 	.__c-383:visited { color: #7C7C7C !important; }
 	body.dark  .__c-383:visited { color: #B8B8B8 !important; }
-	.__bgc-384 { background-color: #f5f5f5; }
+	.__bgc-384 { background-color: #F2E6FF; }
 	body.dark .__bgc-384 { background-color: #21222c; }
 	.__rl-387 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-387 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1282,7 +1282,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-432 { color: #B8B8B8 !important; }
 	.__c-432:visited { color: #7C7C7C !important; }
 	body.dark  .__c-432:visited { color: #B8B8B8 !important; }
-	.__bgc-433 { background-color: #f5f5f5; }
+	.__bgc-433 { background-color: #F2E6FF; }
 	body.dark .__bgc-433 { background-color: #21222c; }
 	.__rl-436 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-436 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1342,7 +1342,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-481 { color: #B8B8B8 !important; }
 	.__c-481:visited { color: #7C7C7C !important; }
 	body.dark  .__c-481:visited { color: #B8B8B8 !important; }
-	.__bgc-482 { background-color: #f5f5f5; }
+	.__bgc-482 { background-color: #F2E6FF; }
 	body.dark .__bgc-482 { background-color: #21222c; }
 	.__rl-485 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-485 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1420,7 +1420,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-540 { color: #B8B8B8 !important; }
 	.__c-540:visited { color: #7C7C7C !important; }
 	body.dark  .__c-540:visited { color: #B8B8B8 !important; }
-	.__bgc-541 { background-color: #f5f5f5; }
+	.__bgc-541 { background-color: #F2E6FF; }
 	body.dark .__bgc-541 { background-color: #21222c; }
 	.__rl-544 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-544 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1473,7 +1473,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-586 { color: #B8B8B8 !important; }
 	.__c-586:visited { color: #7C7C7C !important; }
 	body.dark  .__c-586:visited { color: #B8B8B8 !important; }
-	.__bgc-587 { background-color: #f5f5f5; }
+	.__bgc-587 { background-color: #F2E6FF; }
 	body.dark .__bgc-587 { background-color: #21222c; }
 	.__rl-590 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-590 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1533,7 +1533,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-635 { color: #B8B8B8 !important; }
 	.__c-635:visited { color: #7C7C7C !important; }
 	body.dark  .__c-635:visited { color: #B8B8B8 !important; }
-	.__bgc-636 { background-color: #f5f5f5; }
+	.__bgc-636 { background-color: #F2E6FF; }
 	body.dark .__bgc-636 { background-color: #21222c; }
 	.__rl-639 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-639 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1593,7 +1593,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-684 { color: #B8B8B8 !important; }
 	.__c-684:visited { color: #7C7C7C !important; }
 	body.dark  .__c-684:visited { color: #B8B8B8 !important; }
-	.__bgc-685 { background-color: #f5f5f5; }
+	.__bgc-685 { background-color: #F2E6FF; }
 	body.dark .__bgc-685 { background-color: #21222c; }
 	.__rl-688 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-688 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1671,7 +1671,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-743 { color: #B8B8B8 !important; }
 	.__c-743:visited { color: #7C7C7C !important; }
 	body.dark  .__c-743:visited { color: #B8B8B8 !important; }
-	.__bgc-744 { background-color: #f5f5f5; }
+	.__bgc-744 { background-color: #F2E6FF; }
 	body.dark .__bgc-744 { background-color: #21222c; }
 	.__rl-747 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-747 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1731,7 +1731,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-792 { color: #B8B8B8 !important; }
 	.__c-792:visited { color: #7C7C7C !important; }
 	body.dark  .__c-792:visited { color: #B8B8B8 !important; }
-	.__bgc-793 { background-color: #f5f5f5; }
+	.__bgc-793 { background-color: #F2E6FF; }
 	body.dark .__bgc-793 { background-color: #21222c; }
 	.__rl-796 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-796 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1791,7 +1791,7 @@ More about this can be found in the book.</div><div data-id="396" class="ft_colu
 	body.dark .__c-841 { color: #B8B8B8 !important; }
 	.__c-841:visited { color: #7C7C7C !important; }
 	body.dark  .__c-841:visited { color: #B8B8B8 !important; }
-	.__bgc-842 { background-color: #f5f5f5; }
+	.__bgc-842 { background-color: #F2E6FF; }
 	body.dark .__bgc-842 { background-color: #21222c; }
 	.__rl-845 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-845 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10573,7 +10573,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10587,7 +10587,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10730,7 +10730,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
