--- a/ddd/dia-3/index.html
+++ b/ddd/dia-3/index.html
@@ -743,7 +743,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -859,7 +859,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	body.dark .__c-148 { color: #B8B8B8 !important; }
 	.__c-148:visited { color: #7C7C7C !important; }
 	body.dark  .__c-148:visited { color: #B8B8B8 !important; }
-	.__bgc-149 { background-color: #f5f5f5; }
+	.__bgc-149 { background-color: #F2E6FF; }
 	body.dark .__bgc-149 { background-color: #21222c; }
 	.__rl-152 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-152 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -937,7 +937,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	body.dark .__c-207 { color: #B8B8B8 !important; }
 	.__c-207:visited { color: #7C7C7C !important; }
 	body.dark  .__c-207:visited { color: #B8B8B8 !important; }
-	.__bgc-208 { background-color: #f5f5f5; }
+	.__bgc-208 { background-color: #F2E6FF; }
 	body.dark .__bgc-208 { background-color: #21222c; }
 	.__rl-211 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-211 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1159,7 +1159,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	body.dark .__c-346 { color: #B8B8B8 !important; }
 	.__c-346:visited { color: #7C7C7C !important; }
 	body.dark  .__c-346:visited { color: #B8B8B8 !important; }
-	.__bgc-347 { background-color: #f5f5f5; }
+	.__bgc-347 { background-color: #F2E6FF; }
 	body.dark .__bgc-347 { background-color: #21222c; }
 	.__rl-350 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-350 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1273,7 +1273,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	body.dark .__c-425 { color: #B8B8B8 !important; }
 	.__c-425:visited { color: #7C7C7C !important; }
 	body.dark  .__c-425:visited { color: #B8B8B8 !important; }
-	.__bgc-426 { background-color: #f5f5f5; }
+	.__bgc-426 { background-color: #F2E6FF; }
 	body.dark .__bgc-426 { background-color: #21222c; }
 	.__rl-429 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-429 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1465,7 +1465,7 @@ individual case).</div><div data-id="320" class="ft_column __w-632"></div></div>
 	body.dark .__c-553 { color: #B8B8B8 !important; }
 	.__c-553:visited { color: #7C7C7C !important; }
 	body.dark  .__c-553:visited { color: #B8B8B8 !important; }
-	.__bgc-554 { background-color: #f5f5f5; }
+	.__bgc-554 { background-color: #F2E6FF; }
 	body.dark .__bgc-554 { background-color: #21222c; }
 	.__rl-557 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-557 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10983,7 +10983,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10997,7 +10997,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -11140,7 +11140,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
