--- a/rust/memory/index.html
+++ b/rust/memory/index.html
@@ -447,7 +447,7 @@ it allocates some memory for the heap, and puts 5 there.</p>
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -578,7 +578,7 @@ it allocates some memory for the heap, and puts 5 there.</p>
 	body.dark .__c-156 { color: #B8B8B8 !important; }
 	.__c-156:visited { color: #7C7C7C !important; }
 	body.dark  .__c-156:visited { color: #B8B8B8 !important; }
-	.__bgc-157 { background-color: #f5f5f5; }
+	.__bgc-157 { background-color: #F2E6FF; }
 	body.dark .__bgc-157 { background-color: #21222c; }
 	.__rl-160 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-160 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -638,7 +638,7 @@ it allocates some memory for the heap, and puts 5 there.</p>
 	body.dark .__c-205 { color: #B8B8B8 !important; }
 	.__c-205:visited { color: #7C7C7C !important; }
 	body.dark  .__c-205:visited { color: #B8B8B8 !important; }
-	.__bgc-206 { background-color: #f5f5f5; }
+	.__bgc-206 { background-color: #F2E6FF; }
 	body.dark .__bgc-206 { background-color: #21222c; }
 	.__rl-209 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-209 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -9736,7 +9736,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9750,7 +9750,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9893,7 +9893,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
