--- a/search/index.html
+++ b/search/index.html
@@ -435,7 +435,7 @@ td {
 	body.dark .__c-79 { color: #B8B8B8 !important; }
 	.__c-79:visited { color: #7C7C7C !important; }
 	body.dark  .__c-79:visited { color: #B8B8B8 !important; }
-	.__bgc-80 { background-color: #F5F5F5; }
+	.__bgc-80 { background-color: #F2E6FF; }
 	body.dark .__bgc-80 { background-color: #460F7B; }
 	.__rl-81 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 12px; font-weight: 400; line-height: 16px; }
 	body.mobile .__rl-81 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 12px; font-weight: 400; line-height: 16px; }
@@ -9009,7 +9009,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9023,7 +9023,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9166,7 +9166,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
