--- a/c1/intro/index.html
+++ b/c1/intro/index.html
@@ -395,7 +395,7 @@ Calendly: Schedule <a href="https://calendly.com/amitu-fifthtry/30min?month=2022
 	.__w-48 { width: 100%; }
 	.__pl-49 { padding-left: 20px; }
 	.__pr-50 { padding-right: 20px; }
-	.__bgc-51 { background-color: #F5F5F5; }
+	.__bgc-51 { background-color: #F2E6FF; }
 	body.dark .__bgc-51 { background-color: #460F7B; }
 	.__w-52 { width: 100%; }
 	.__pt-53 { padding-top: 16px; }
@@ -9241,7 +9241,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9255,7 +9255,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9398,7 +9398,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
