--- a/ddd/data-intensive-application/1-reliable-scalable-maintainable/index.html
+++ b/ddd/data-intensive-application/1-reliable-scalable-maintainable/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
+                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
             
     
 
@@ -647,7 +647,7 @@ extensibility, modifiability, or plasticity.
 	body.dark .__c-119 { color: #B8B8B8 !important; }
 	.__c-119:visited { color: #7C7C7C !important; }
 	body.dark  .__c-119:visited { color: #B8B8B8 !important; }
-	.__bgc-120 { background-color: #f5f5f5; }
+	.__bgc-120 { background-color: #F2E6FF; }
 	body.dark .__bgc-120 { background-color: #21222c; }
 	.__rl-123 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-123 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -733,7 +733,7 @@ extensibility, modifiability, or plasticity.
 	body.dark .__c-182 { color: #B8B8B8 !important; }
 	.__c-182:visited { color: #7C7C7C !important; }
 	body.dark  .__c-182:visited { color: #B8B8B8 !important; }
-	.__bgc-183 { background-color: #f5f5f5; }
+	.__bgc-183 { background-color: #F2E6FF; }
 	body.dark .__bgc-183 { background-color: #21222c; }
 	.__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -9349,7 +9349,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9363,7 +9363,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9506,7 +9506,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
