--- a/ddd/data-intensive-application/3-storage-retrieval/index.html
+++ b/ddd/data-intensive-application/3-storage-retrieval/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -780,7 +780,7 @@ individual case).</div><div data-id="292" class="ft_column __w-581"></div></div>
 	body.dark .__c-97 { color: #B8B8B8 !important; }
 	.__c-97:visited { color: #7C7C7C !important; }
 	body.dark  .__c-97:visited { color: #B8B8B8 !important; }
-	.__bgc-98 { background-color: #f5f5f5; }
+	.__bgc-98 { background-color: #F2E6FF; }
 	body.dark .__bgc-98 { background-color: #21222c; }
 	.__rl-101 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-101 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -858,7 +858,7 @@ individual case).</div><div data-id="292" class="ft_column __w-581"></div></div>
 	body.dark .__c-156 { color: #B8B8B8 !important; }
 	.__c-156:visited { color: #7C7C7C !important; }
 	body.dark  .__c-156:visited { color: #B8B8B8 !important; }
-	.__bgc-157 { background-color: #f5f5f5; }
+	.__bgc-157 { background-color: #F2E6FF; }
 	body.dark .__bgc-157 { background-color: #21222c; }
 	.__rl-160 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-160 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1080,7 +1080,7 @@ individual case).</div><div data-id="292" class="ft_column __w-581"></div></div>
 	body.dark .__c-295 { color: #B8B8B8 !important; }
 	.__c-295:visited { color: #7C7C7C !important; }
 	body.dark  .__c-295:visited { color: #B8B8B8 !important; }
-	.__bgc-296 { background-color: #f5f5f5; }
+	.__bgc-296 { background-color: #F2E6FF; }
 	body.dark .__bgc-296 { background-color: #21222c; }
 	.__rl-299 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-299 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1194,7 +1194,7 @@ individual case).</div><div data-id="292" class="ft_column __w-581"></div></div>
 	body.dark .__c-374 { color: #B8B8B8 !important; }
 	.__c-374:visited { color: #7C7C7C !important; }
 	body.dark  .__c-374:visited { color: #B8B8B8 !important; }
-	.__bgc-375 { background-color: #f5f5f5; }
+	.__bgc-375 { background-color: #F2E6FF; }
 	body.dark .__bgc-375 { background-color: #21222c; }
 	.__rl-378 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-378 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1386,7 +1386,7 @@ individual case).</div><div data-id="292" class="ft_column __w-581"></div></div>
 	body.dark .__c-502 { color: #B8B8B8 !important; }
 	.__c-502:visited { color: #7C7C7C !important; }
 	body.dark  .__c-502:visited { color: #B8B8B8 !important; }
-	.__bgc-503 { background-color: #f5f5f5; }
+	.__bgc-503 { background-color: #F2E6FF; }
 	body.dark .__bgc-503 { background-color: #21222c; }
 	.__rl-506 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-506 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10274,7 +10274,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10288,7 +10288,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10431,7 +10431,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
