--- a/ddd/data-intensive-application/4-encoding-and-evolution/index.html
+++ b/ddd/data-intensive-application/4-encoding-and-evolution/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -823,7 +823,7 @@ are possible but need to be planned carefully. An experimental new maps datatype
 	body.dark .__c-127 { color: #B8B8B8 !important; }
 	.__c-127:visited { color: #7C7C7C !important; }
 	body.dark  .__c-127:visited { color: #B8B8B8 !important; }
-	.__bgc-128 { background-color: #f5f5f5; }
+	.__bgc-128 { background-color: #F2E6FF; }
 	body.dark .__bgc-128 { background-color: #21222c; }
 	.__rl-131 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-131 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -934,7 +934,7 @@ are possible but need to be planned carefully. An experimental new maps datatype
 	body.dark .__c-207 { color: #B8B8B8 !important; }
 	.__c-207:visited { color: #7C7C7C !important; }
 	body.dark  .__c-207:visited { color: #B8B8B8 !important; }
-	.__bgc-208 { background-color: #f5f5f5; }
+	.__bgc-208 { background-color: #F2E6FF; }
 	body.dark .__bgc-208 { background-color: #21222c; }
 	.__rl-211 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-211 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -995,7 +995,7 @@ are possible but need to be planned carefully. An experimental new maps datatype
 	body.dark .__c-257 { color: #B8B8B8 !important; }
 	.__c-257:visited { color: #7C7C7C !important; }
 	body.dark  .__c-257:visited { color: #B8B8B8 !important; }
-	.__bgc-258 { background-color: #f5f5f5; }
+	.__bgc-258 { background-color: #F2E6FF; }
 	body.dark .__bgc-258 { background-color: #21222c; }
 	.__rl-261 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-261 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -9947,7 +9947,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9961,7 +9961,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10104,7 +10104,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
