--- a/ddd/data-intensive-application/index.html
+++ b/ddd/data-intensive-application/index.html
@@ -416,7 +416,7 @@ subject matter.</div><div data-id="80" class="ft_column __w-102 __g-103"><div da
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -9810,7 +9810,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9824,7 +9824,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9967,7 +9967,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
