--- a/ddd/dia-2/index.html
+++ b/ddd/dia-2/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
+                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
             
     
 
@@ -786,7 +786,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -903,7 +903,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-149 { color: #B8B8B8 !important; }
 	.__c-149:visited { color: #7C7C7C !important; }
 	body.dark  .__c-149:visited { color: #B8B8B8 !important; }
-	.__bgc-150 { background-color: #f5f5f5; }
+	.__bgc-150 { background-color: #F2E6FF; }
 	body.dark .__bgc-150 { background-color: #21222c; }
 	.__rl-153 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-153 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -992,7 +992,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-215 { color: #B8B8B8 !important; }
 	.__c-215:visited { color: #7C7C7C !important; }
 	body.dark  .__c-215:visited { color: #B8B8B8 !important; }
-	.__bgc-216 { background-color: #f5f5f5; }
+	.__bgc-216 { background-color: #F2E6FF; }
 	body.dark .__bgc-216 { background-color: #21222c; }
 	.__rl-219 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-219 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1160,7 +1160,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-324 { color: #B8B8B8 !important; }
 	.__c-324:visited { color: #7C7C7C !important; }
 	body.dark  .__c-324:visited { color: #B8B8B8 !important; }
-	.__bgc-325 { background-color: #f5f5f5; }
+	.__bgc-325 { background-color: #F2E6FF; }
 	body.dark .__bgc-325 { background-color: #21222c; }
 	.__rl-328 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-328 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1220,7 +1220,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-373 { color: #B8B8B8 !important; }
 	.__c-373:visited { color: #7C7C7C !important; }
 	body.dark  .__c-373:visited { color: #B8B8B8 !important; }
-	.__bgc-374 { background-color: #f5f5f5; }
+	.__bgc-374 { background-color: #F2E6FF; }
 	body.dark .__bgc-374 { background-color: #21222c; }
 	.__rl-377 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-377 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1301,7 +1301,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-434 { color: #B8B8B8 !important; }
 	.__c-434:visited { color: #7C7C7C !important; }
 	body.dark  .__c-434:visited { color: #B8B8B8 !important; }
-	.__bgc-435 { background-color: #f5f5f5; }
+	.__bgc-435 { background-color: #F2E6FF; }
 	body.dark .__bgc-435 { background-color: #21222c; }
 	.__rl-438 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-438 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1361,7 +1361,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-483 { color: #B8B8B8 !important; }
 	.__c-483:visited { color: #7C7C7C !important; }
 	body.dark  .__c-483:visited { color: #B8B8B8 !important; }
-	.__bgc-484 { background-color: #f5f5f5; }
+	.__bgc-484 { background-color: #F2E6FF; }
 	body.dark .__bgc-484 { background-color: #21222c; }
 	.__rl-487 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-487 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1421,7 +1421,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-532 { color: #B8B8B8 !important; }
 	.__c-532:visited { color: #7C7C7C !important; }
 	body.dark  .__c-532:visited { color: #B8B8B8 !important; }
-	.__bgc-533 { background-color: #f5f5f5; }
+	.__bgc-533 { background-color: #F2E6FF; }
 	body.dark .__bgc-533 { background-color: #21222c; }
 	.__rl-536 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-536 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1499,7 +1499,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-591 { color: #B8B8B8 !important; }
 	.__c-591:visited { color: #7C7C7C !important; }
 	body.dark  .__c-591:visited { color: #B8B8B8 !important; }
-	.__bgc-592 { background-color: #f5f5f5; }
+	.__bgc-592 { background-color: #F2E6FF; }
 	body.dark .__bgc-592 { background-color: #21222c; }
 	.__rl-595 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-595 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1552,7 +1552,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-637 { color: #B8B8B8 !important; }
 	.__c-637:visited { color: #7C7C7C !important; }
 	body.dark  .__c-637:visited { color: #B8B8B8 !important; }
-	.__bgc-638 { background-color: #f5f5f5; }
+	.__bgc-638 { background-color: #F2E6FF; }
 	body.dark .__bgc-638 { background-color: #21222c; }
 	.__rl-641 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-641 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1612,7 +1612,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-686 { color: #B8B8B8 !important; }
 	.__c-686:visited { color: #7C7C7C !important; }
 	body.dark  .__c-686:visited { color: #B8B8B8 !important; }
-	.__bgc-687 { background-color: #f5f5f5; }
+	.__bgc-687 { background-color: #F2E6FF; }
 	body.dark .__bgc-687 { background-color: #21222c; }
 	.__rl-690 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-690 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1672,7 +1672,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-735 { color: #B8B8B8 !important; }
 	.__c-735:visited { color: #7C7C7C !important; }
 	body.dark  .__c-735:visited { color: #B8B8B8 !important; }
-	.__bgc-736 { background-color: #f5f5f5; }
+	.__bgc-736 { background-color: #F2E6FF; }
 	body.dark .__bgc-736 { background-color: #21222c; }
 	.__rl-739 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-739 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1750,7 +1750,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-794 { color: #B8B8B8 !important; }
 	.__c-794:visited { color: #7C7C7C !important; }
 	body.dark  .__c-794:visited { color: #B8B8B8 !important; }
-	.__bgc-795 { background-color: #f5f5f5; }
+	.__bgc-795 { background-color: #F2E6FF; }
 	body.dark .__bgc-795 { background-color: #21222c; }
 	.__rl-798 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-798 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1810,7 +1810,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-843 { color: #B8B8B8 !important; }
 	.__c-843:visited { color: #7C7C7C !important; }
 	body.dark  .__c-843:visited { color: #B8B8B8 !important; }
-	.__bgc-844 { background-color: #f5f5f5; }
+	.__bgc-844 { background-color: #F2E6FF; }
 	body.dark .__bgc-844 { background-color: #21222c; }
 	.__rl-847 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-847 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1870,7 +1870,7 @@ More about this can be found in the book.</div><div data-id="424" class="ft_colu
 	body.dark .__c-892 { color: #B8B8B8 !important; }
 	.__c-892:visited { color: #7C7C7C !important; }
 	body.dark  .__c-892:visited { color: #B8B8B8 !important; }
-	.__bgc-893 { background-color: #f5f5f5; }
+	.__bgc-893 { background-color: #F2E6FF; }
 	body.dark .__bgc-893 { background-color: #21222c; }
 	.__rl-896 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-896 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -11282,7 +11282,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -11296,7 +11296,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -11439,7 +11439,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
