--- a/rust/arc/index.html
+++ b/rust/arc/index.html
@@ -447,7 +447,7 @@ let my_weak = Arc::downgrade(&my_arc);
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -542,7 +542,7 @@ let my_weak = Arc::downgrade(&my_arc);
 	body.dark .__c-136 { color: #B8B8B8 !important; }
 	.__c-136:visited { color: #7C7C7C !important; }
 	body.dark  .__c-136:visited { color: #B8B8B8 !important; }
-	.__bgc-137 { background-color: #f5f5f5; }
+	.__bgc-137 { background-color: #F2E6FF; }
 	body.dark .__bgc-137 { background-color: #21222c; }
 	.__rl-140 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-140 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -595,7 +595,7 @@ let my_weak = Arc::downgrade(&my_arc);
 	body.dark .__c-182 { color: #B8B8B8 !important; }
 	.__c-182:visited { color: #7C7C7C !important; }
 	body.dark  .__c-182:visited { color: #B8B8B8 !important; }
-	.__bgc-183 { background-color: #f5f5f5; }
+	.__bgc-183 { background-color: #F2E6FF; }
 	body.dark .__bgc-183 { background-color: #21222c; }
 	.__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -666,7 +666,7 @@ let my_weak = Arc::downgrade(&my_arc);
 	body.dark .__c-238 { color: #B8B8B8 !important; }
 	.__c-238:visited { color: #7C7C7C !important; }
 	body.dark  .__c-238:visited { color: #B8B8B8 !important; }
-	.__bgc-239 { background-color: #f5f5f5; }
+	.__bgc-239 { background-color: #F2E6FF; }
 	body.dark .__bgc-239 { background-color: #21222c; }
 	.__rl-242 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-242 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -9747,7 +9747,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9761,7 +9761,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9904,7 +9904,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
