--- a/rust/cell-refcell/index.html
+++ b/rust/cell-refcell/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -508,7 +508,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -621,7 +621,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-146 { color: #B8B8B8 !important; }
 	.__c-146:visited { color: #7C7C7C !important; }
 	body.dark  .__c-146:visited { color: #B8B8B8 !important; }
-	.__bgc-147 { background-color: #f5f5f5; }
+	.__bgc-147 { background-color: #F2E6FF; }
 	body.dark .__bgc-147 { background-color: #21222c; }
 	.__rl-150 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-150 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -692,7 +692,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-202 { color: #B8B8B8 !important; }
 	.__c-202:visited { color: #7C7C7C !important; }
 	body.dark  .__c-202:visited { color: #B8B8B8 !important; }
-	.__bgc-203 { background-color: #f5f5f5; }
+	.__bgc-203 { background-color: #F2E6FF; }
 	body.dark .__bgc-203 { background-color: #21222c; }
 	.__rl-206 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-206 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -763,7 +763,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-258 { color: #B8B8B8 !important; }
 	.__c-258:visited { color: #7C7C7C !important; }
 	body.dark  .__c-258:visited { color: #B8B8B8 !important; }
-	.__bgc-259 { background-color: #f5f5f5; }
+	.__bgc-259 { background-color: #F2E6FF; }
 	body.dark .__bgc-259 { background-color: #21222c; }
 	.__rl-262 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-262 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -841,7 +841,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-317 { color: #B8B8B8 !important; }
 	.__c-317:visited { color: #7C7C7C !important; }
 	body.dark  .__c-317:visited { color: #B8B8B8 !important; }
-	.__bgc-318 { background-color: #f5f5f5; }
+	.__bgc-318 { background-color: #F2E6FF; }
 	body.dark .__bgc-318 { background-color: #21222c; }
 	.__rl-321 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-321 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -901,7 +901,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-366 { color: #B8B8B8 !important; }
 	.__c-366:visited { color: #7C7C7C !important; }
 	body.dark  .__c-366:visited { color: #B8B8B8 !important; }
-	.__bgc-367 { background-color: #f5f5f5; }
+	.__bgc-367 { background-color: #F2E6FF; }
 	body.dark .__bgc-367 { background-color: #21222c; }
 	.__rl-370 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-370 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -961,7 +961,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-415 { color: #B8B8B8 !important; }
 	.__c-415:visited { color: #7C7C7C !important; }
 	body.dark  .__c-415:visited { color: #B8B8B8 !important; }
-	.__bgc-416 { background-color: #f5f5f5; }
+	.__bgc-416 { background-color: #F2E6FF; }
 	body.dark .__bgc-416 { background-color: #21222c; }
 	.__rl-419 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-419 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -1039,7 +1039,7 @@ runtime panics.</div></div></div></div><comment data-id="245"></comment><comment
 	body.dark .__c-474 { color: #B8B8B8 !important; }
 	.__c-474:visited { color: #7C7C7C !important; }
 	body.dark  .__c-474:visited { color: #B8B8B8 !important; }
-	.__bgc-475 { background-color: #f5f5f5; }
+	.__bgc-475 { background-color: #F2E6FF; }
 	body.dark .__bgc-475 { background-color: #21222c; }
 	.__rl-478 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-478 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10200,7 +10200,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10214,7 +10214,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10357,7 +10357,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
