--- a/rust/index.html
+++ b/rust/index.html
@@ -416,7 +416,7 @@ I am listing the discoveries and interesting facts that I find in rust.</div><di
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -9464,7 +9464,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9478,7 +9478,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9621,7 +9621,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
