--- a/rust/mutex-rwlock/index.html
+++ b/rust/mutex-rwlock/index.html
@@ -598,7 +598,7 @@ have the lock.</div><div data-id="188" class="ft_column __w-353"></div></div></d
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -711,7 +711,7 @@ have the lock.</div><div data-id="188" class="ft_column __w-353"></div></div></d
 	body.dark .__c-146 { color: #B8B8B8 !important; }
 	.__c-146:visited { color: #7C7C7C !important; }
 	body.dark  .__c-146:visited { color: #B8B8B8 !important; }
-	.__bgc-147 { background-color: #f5f5f5; }
+	.__bgc-147 { background-color: #F2E6FF; }
 	body.dark .__bgc-147 { background-color: #21222c; }
 	.__rl-150 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-150 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -782,7 +782,7 @@ have the lock.</div><div data-id="188" class="ft_column __w-353"></div></div></d
 	body.dark .__c-202 { color: #B8B8B8 !important; }
 	.__c-202:visited { color: #7C7C7C !important; }
 	body.dark  .__c-202:visited { color: #B8B8B8 !important; }
-	.__bgc-203 { background-color: #f5f5f5; }
+	.__bgc-203 { background-color: #F2E6FF; }
 	body.dark .__bgc-203 { background-color: #21222c; }
 	.__rl-206 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-206 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -842,7 +842,7 @@ have the lock.</div><div data-id="188" class="ft_column __w-353"></div></div></d
 	body.dark .__c-251 { color: #B8B8B8 !important; }
 	.__c-251:visited { color: #7C7C7C !important; }
 	body.dark  .__c-251:visited { color: #B8B8B8 !important; }
-	.__bgc-252 { background-color: #f5f5f5; }
+	.__bgc-252 { background-color: #F2E6FF; }
 	body.dark .__bgc-252 { background-color: #21222c; }
 	.__rl-255 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-255 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -913,7 +913,7 @@ have the lock.</div><div data-id="188" class="ft_column __w-353"></div></div></d
 	body.dark .__c-307 { color: #B8B8B8 !important; }
 	.__c-307:visited { color: #7C7C7C !important; }
 	body.dark  .__c-307:visited { color: #B8B8B8 !important; }
-	.__bgc-308 { background-color: #f5f5f5; }
+	.__bgc-308 { background-color: #F2E6FF; }
 	body.dark .__bgc-308 { background-color: #21222c; }
 	.__rl-311 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-311 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10089,7 +10089,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10103,7 +10103,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10246,7 +10246,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
