--- a/rust/rc/index.html
+++ b/rust/rc/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -577,7 +577,7 @@ fn main() {
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -672,7 +672,7 @@ fn main() {
 	body.dark .__c-136 { color: #B8B8B8 !important; }
 	.__c-136:visited { color: #7C7C7C !important; }
 	body.dark  .__c-136:visited { color: #B8B8B8 !important; }
-	.__bgc-137 { background-color: #f5f5f5; }
+	.__bgc-137 { background-color: #F2E6FF; }
 	body.dark .__bgc-137 { background-color: #21222c; }
 	.__rl-140 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-140 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -725,7 +725,7 @@ fn main() {
 	body.dark .__c-182 { color: #B8B8B8 !important; }
 	.__c-182:visited { color: #7C7C7C !important; }
 	body.dark  .__c-182:visited { color: #B8B8B8 !important; }
-	.__bgc-183 { background-color: #f5f5f5; }
+	.__bgc-183 { background-color: #F2E6FF; }
 	body.dark .__bgc-183 { background-color: #21222c; }
 	.__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-186 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -786,7 +786,7 @@ fn main() {
 	body.dark .__c-232 { color: #B8B8B8 !important; }
 	.__c-232:visited { color: #7C7C7C !important; }
 	body.dark  .__c-232:visited { color: #B8B8B8 !important; }
-	.__bgc-233 { background-color: #f5f5f5; }
+	.__bgc-233 { background-color: #F2E6FF; }
 	body.dark .__bgc-233 { background-color: #21222c; }
 	.__rl-236 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-236 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -857,7 +857,7 @@ fn main() {
 	body.dark .__c-288 { color: #B8B8B8 !important; }
 	.__c-288:visited { color: #7C7C7C !important; }
 	body.dark  .__c-288:visited { color: #B8B8B8 !important; }
-	.__bgc-289 { background-color: #f5f5f5; }
+	.__bgc-289 { background-color: #F2E6FF; }
 	body.dark .__bgc-289 { background-color: #21222c; }
 	.__rl-292 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-292 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -918,7 +918,7 @@ fn main() {
 	body.dark .__c-338 { color: #B8B8B8 !important; }
 	.__c-338:visited { color: #7C7C7C !important; }
 	body.dark  .__c-338:visited { color: #B8B8B8 !important; }
-	.__bgc-339 { background-color: #f5f5f5; }
+	.__bgc-339 { background-color: #F2E6FF; }
 	body.dark .__bgc-339 { background-color: #21222c; }
 	.__rl-342 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-342 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -10013,7 +10013,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -10027,7 +10027,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -10170,7 +10170,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
