--- a/rust/rcrefcell/index.html
+++ b/rust/rcrefcell/index.html
@@ -465,7 +465,7 @@ fn main() {
 	.__w-60 { width: 100%; }
 	.__pl-61 { padding-left: 20px; }
 	.__pr-62 { padding-right: 20px; }
-	.__bgc-63 { background-color: #F5F5F5; }
+	.__bgc-63 { background-color: #F2E6FF; }
 	body.dark .__bgc-63 { background-color: #460F7B; }
 	.__w-64 { width: 100%; }
 	.__pt-65 { padding-top: 16px; }
@@ -568,7 +568,7 @@ fn main() {
 	body.dark .__c-140 { color: #B8B8B8 !important; }
 	.__c-140:visited { color: #7C7C7C !important; }
 	body.dark  .__c-140:visited { color: #B8B8B8 !important; }
-	.__bgc-141 { background-color: #f5f5f5; }
+	.__bgc-141 { background-color: #F2E6FF; }
 	body.dark .__bgc-141 { background-color: #21222c; }
 	.__rl-144 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-144 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -629,7 +629,7 @@ fn main() {
 	body.dark .__c-190 { color: #B8B8B8 !important; }
 	.__c-190:visited { color: #7C7C7C !important; }
 	body.dark  .__c-190:visited { color: #B8B8B8 !important; }
-	.__bgc-191 { background-color: #f5f5f5; }
+	.__bgc-191 { background-color: #F2E6FF; }
 	body.dark .__bgc-191 { background-color: #21222c; }
 	.__rl-194 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
 	body.mobile .__rl-194 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
@@ -9700,7 +9700,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_1_", 
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__step_2_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#460F7B");
   return record;
 }());
@@ -9714,7 +9714,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__overlay_",
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__code_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#f5f5f5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#21222c");
   return record;
 }());
@@ -9857,7 +9857,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_second
 fastn_utils.createNestedObject(global, "arjaupashak_com_FASTN_colors__cta_secondary_hover_", function () {
   let record = fastn.recordInstance({
   });
-  record.set("light", "#F5F5F5");
+  record.set("light", "#F2E6FF");
   record.set("dark", "#242424");
   return record;
 }());
