--- a/ddd/funny-github-workflow/index.html
+++ b/ddd/funny-github-workflow/index.html
@@ -4941,6 +4941,44 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Part II. Distributed Data");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "- Replication");
+      record.set("url", "ddd/dia-5/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
     }()]));
     return record;
   }()]));
@@ -8257,6 +8295,44 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       });
       record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Part II. Distributed Data");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "- Replication");
+      record.set("url", "ddd/dia-5/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
