--- a/search/index.html
+++ b/search/index.html
@@ -10139,6 +10139,44 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
           record.set("is_open", false);
           record.set("children", fastn.mutableList([]));
           return record;
+        }(),
+        function () {
+          let record = fastn.recordInstance({
+          });
+          record.set("title", "Part II. Distributed Data");
+          record.set("url", "");
+          record.set("description", null);
+          record.set("path", null);
+          record.set("number", null);
+          record.set("font_icon", null);
+          record.set("img_src", null);
+          record.set("bury", false);
+          record.set("document", null);
+          record.set("is_heading", false);
+          record.set("is_disabled", false);
+          record.set("is_active", false);
+          record.set("is_open", false);
+          record.set("children", fastn.mutableList([]));
+          return record;
+        }(),
+        function () {
+          let record = fastn.recordInstance({
+          });
+          record.set("title", "- Replication");
+          record.set("url", "/ddd/dia-5/");
+          record.set("description", null);
+          record.set("path", null);
+          record.set("number", null);
+          record.set("font_icon", null);
+          record.set("img_src", null);
+          record.set("bury", false);
+          record.set("document", null);
+          record.set("is_heading", false);
+          record.set("is_disabled", false);
+          record.set("is_active", false);
+          record.set("is_open", false);
+          record.set("children", fastn.mutableList([]));
+          return record;
         }()]));
         return record;
       }()]));
